# mmd-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
mmd/: build.py  config.py  logs.py  main.py  test.py
tests/: test_config.py
